# personal-mailing

./: .cursorrules  .gitignore  Dockerfile  Makefile  README.md  alembic.ini  compose.override.yml  compose.yml  docker-compose.yaml  example.env  package.json  pnpm-lock.yaml  pyproject.toml  seed.py
admin-panel/: .gitignore  Dockerfile  Dockerfile.Prod  compose.yml  deploy.sh  index.html  jsconfig.json  package-lock.json  package.json  pnpm-lock.yaml  tailwind.config.js  tailwind.config.ts  vite.config.js  vite.config.ts
admin-panel/src/: App.js  App.svelte  Main.svelte  Navbar.svelte  Sidebar.svelte  app.html  main.js
admin-panel2-revenge-of-the-backender/: Dockerfile  jsconfig.json  package.json  pnpm-lock.yaml  vite.config.js
admin-panel2-revenge-of-the-backender/src/: App.svelte  Header.svelte  Sidebar.svelte
alembic/versions/: 2025_03_15_2221-c4891780158a_initial.py  2025_04_15_2153-858ea5668483_initial.py  (+4 more)
api/: admin-login.bru  student-auth.bru  student-by-id.bru  studnet-courses.bru  upload-courses.bru  upload-modeus.bru  upload-students.bru  user-auth.bru
app/: .env.template  main.py
client/: Dockerfile  index.html  jsconfig.json  package-lock.json  package.json  vite.config.js  vite.config.js.timestamp-1732288172990-8953ed666dfce.mjs
scripts/: convert_to_uuid.py
server/: app.js  package-lock.json  package.json
svelte-app/: package.json  pnpm-lock.yaml
telegram/: handlers.py  kb.py  main.py
telegram-bot/: .gitignore  Dockerfile  api_bot.py  chat_curator.py  compose.yml  config.py  example.env  main.py  requirements.txt  start.sh  states.py
(+1604 files in other folders)
