[project]
name = "knowledge-base"
version = "0.1.0"
description = "Knowledge base for IT university tutors"
authors = [
    {name = "Rostislav Konovalov",email = "krokotynig@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13.1"
dependencies = [
    "fastapi (>=0.115.11,<0.116.0)",
    "sqlalchemy[asyncio] (>=2.0.38,<3.0.0)",
    "uvicorn[standard] (>=0.34.0,<0.35.0)",
    "pydantic[email] (>=2.10.6,<3.0.0)",
    "pydantic-settings (>=2.8.1,<3.0.0)",
    "asyncpg (>=0.30.0,<0.31.0)",
    "alembic (>=1.15.1,<2.0.0)",
    "aiosqlite (>=0.21.0,<0.22.0)",
    "orjson (>=3.10.15,<4.0.0)",
    "elasticsearch (>=8.11.1,<9.0.0)",
    "elasticsearch-dsl (>=8.11.0,<9.0.0)",
    "aiohttp (>=3.11.13,<4.0.0)",
    "minio (>=7.2.3,<8.0.0)",
    "python-multipart (>=0.0.9,<0.1.0)",
]

[tool.poetry]
package-mode = false
name = "knowledge-base"
version = "0.1.0"
description = "Knowledge base for IT university tutors"
authors = ["Rostislav Konovalov krokotynig@gmail.com"]

[tool.poetry.group.dev.dependencies]
black = "^25.1.0"
pylint = "^3.3.5"
isort = "^6.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
